# mimic-bot

./: .gitignore  README.md  cont.py  database.py  main.py  processing.py  pyproject.toml
plays/: A Midsummer Night's Dream.txt  All's Well That Ends Well.txt  Antony and Cleopatra.txt  As You Like It.txt  Coriolanus.txt  Cymbeline.txt  Hamlet.txt  Henry IV Part 1.txt  Henry IV Part 2.txt  Henry V.txt  Henry VI Part 1.txt  Henry VI Part 2.txt  Henry VI Part 3.txt  Henry VIII.txt  Julius Caesar.txt  King John.txt  King Lear.txt  Love's Labor's Lost.txt  Macbeth.txt  Measure for Measure.txt  Much Ado About Nothing.txt  Othello.txt  Pericles.txt  Richard II.txt  Richard III.txt  Romeo and Juliet.txt  The Comedy of Errors.txt  The Merchant of Venice.txt  The Merry Wives of Windsor.txt  The Taming of the Shrew.txt  The Tempest.txt  The Winter's Tale.txt  Timon of Athens.txt  Titus Andronicus.txt  Troilus and Cressida.txt  Twelfth Night.txt  Two Gentlemen of Verona.txt  Two Noble Kinsmen.txt
