[tool.poetry]
name = "repl_nix_Mimic-Bot"
version = "0.1.0"
description = ""
authors = ["DavidChoi29 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
pandas = "^1.4.2"
replit = "^3.2.4"
requests = "^2.28.0"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
